--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server",
-    "debug": "nodemon --inspect server"
+    "server": "nodemon server"
   },
   "keywords": [],
   "author": "",
